# llm-deploy

./: .gitignore  LICENSE  README.md  env.sh.dist  gpt_repository_loader.py  pyproject.toml  requirements.txt
llm-deploy/: app_logic.py  cli.py  litellm.py  ollama.py  vastai.py
llm_deploy/: app_logic.py  cli.py  config.py  instance_manager.py  interfaces.py  litellm.py  llm_calculator.py  llms_config.py  logging_config.py  model_allocator.py  model_manager.py  ollama.py  storage_manager.py  test.py  utils.py  vastai.py
tests/: test_llm_calculator.py  test_model_allocator.py
tests/mocks/: case_12GB.json  case_16GB.json  case_24GB.json  case_32GB.json  case_48GB.json  case_56GB.json  case_8GB.json
